--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.30.0",
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
     "pydantic>=2.11.5",
     "sqlalchemy>=2.0.41",
 ]
