--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,21 @@ dev = [
     "ruff>=0.11.13",
     "ty>=0.0.1a8",
 ]
+
+[tool.ruff]
+target-version = "py313"
+line-length = 88
+
+[tool.ruff.lint]
+select = [
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "E",   # pycodestyle error
+    "F",   # Pyflakes
+    "I",   # isort
+    "PT",  # flake8-pytest-style
+    "Q",   # flake8-quotes
+    "T20", # flake8-print
+    "UP",  # pyupgrade
+    "W",   # pycodestyle warning
+]
